refactor: use mono publisher in endpoints