@@ -1,7 +1,8 @@
 package br.com.painel_economico.service;
 
-import br.com.painel_economico.dto.HistoricalDataPointDTO;
-import br.com.painel_economico.dto.IndicatorDTO;
+import br.com.painel_economico.dto.HistoricalDataPoint;
+import br.com.painel_economico.dto.Indicator;
+import reactor.core.publisher.Mono;
 
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.core.ParameterizedTypeReference;
@@ -9,25 +10,25 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.reactive.function.client.WebClient;
 import org.springframework.web.reactive.function.client.WebClientResponseException;
 import org.springframework.http.HttpStatusCode;
-import reactor.core.publisher.Mono;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
 @Service
 public class IndicatorService {
         private final WebClient webClient;
-        private final String awesomeApiUrl = "https://economia.awesomeapi.com.br/json/all";
+        private final String awesomeApiUrl = "https://economia.awesomeapi.com.br/json";
 
         public IndicatorService(WebClient webClient) {
                 this.webClient = webClient;
         }
 
         @Cacheable("indicators")
-        public List<IndicatorDTO> getAllIndicators() {
-                Map<String, IndicatorDTO> responseMap = webClient.get()
-                                .uri(awesomeApiUrl)
+        public Mono<List<Indicator>> getAllIndicators() {
+                return webClient.get()
+                                .uri(awesomeApiUrl + "/all")
                                 .retrieve()
                                 .onStatus(HttpStatusCode::isError, response -> response.bodyToMono(String.class)
                                                 .flatMap(errorBody -> Mono.error(
@@ -38,38 +39,30 @@ public class IndicatorService {
                                                                                 response.headers().asHttpHeaders(),
                                                                                 errorBody.getBytes(),
                                                                                 null))))
-                                .bodyToMono(new ParameterizedTypeReference<Map<String, IndicatorDTO>>() {
+                                .bodyToMono(new ParameterizedTypeReference<Map<String, Indicator>>() {
                                 })
-                                .block();
-
-                if (responseMap == null) {
-                        return List.of();
-                }
-
-                return new ArrayList<>(responseMap.values());
+                                .map(responseMap -> (List<Indicator>) new ArrayList<>(responseMap.values()))
+                                .defaultIfEmpty(Collections.emptyList());
         }
 
         @Cacheable("historical")
-        public List<HistoricalDataPointDTO> getHistoricalData(String currencyCode, int days) {
-                String historicalApiUrl = String.format("https://economia.awesomeapi.com.br/json/daily/%s-BRL/%d",
-                                currencyCode,
-                                days);
+        public Mono<List<HistoricalDataPoint>> getHistoricalData(String currencyCode, int days) {
+                String historicalApiUrl = String.format("/daily/%s-BRL/%d", currencyCode, days);
 
                 return webClient.get()
-                                .uri(historicalApiUrl)
+                                .uri(awesomeApiUrl + historicalApiUrl)
                                 .retrieve()
                                 .onStatus(HttpStatusCode::isError, response -> response.bodyToMono(String.class)
                                                 .flatMap(errorBody -> Mono.error(
                                                                 new WebClientResponseException(
                                                                                 response.statusCode().value(),
-                                                                                "Erro na API de Indicadores: "
+                                                                                "Erro na API de Dados Históricos: "
                                                                                                 + errorBody,
                                                                                 response.headers().asHttpHeaders(),
                                                                                 errorBody.getBytes(),
                                                                                 null))))
-
-                                .bodyToMono(new ParameterizedTypeReference<List<HistoricalDataPointDTO>>() {
+                                .bodyToMono(new ParameterizedTypeReference<List<HistoricalDataPoint>>() {
                                 })
-                                .block();
+                                .defaultIfEmpty(Collections.emptyList());
         }
 }
